# CP_Debugger

./: .gitignore  CMakeLists.txt  app.js  package-lock.json  package.json  storage.json
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/debug/: route.ts
frontend/src/app/api/debug/counts/: route.ts
frontend/src/app/api/debug/stream/: route.ts
frontend/src/components/: CodePanel.tsx  GraphPanel.tsx  SessionNavigator.tsx  VariablePanel.tsx
frontend/src/lib/: dataShapes.ts  debugStore.ts  groupDebugEntries.ts  useDebugSessions.ts
lib/cpp/: debug.h  sample_bipartite.in  sample_small.in  test.cpp
lib/cpp/.cph/: .test.cpp_37d6d64eef7439ff7ee0c1aef7678916.prob  .test.cpp_9072fe7e8094a974269268e84fd5d2dc.prob
public/javascripts/: graphUtils.js  script.js
public/stylesheets/: style.css
routes/: data.js  graph.js
views/: error.pug  graph.pug  index.pug  ui.pug
